--- a/smas/pom.xml
+++ b/smas/pom.xml
@@ -89,7 +89,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.1</version>
         </dependency>
-
+<!--        jwt生成token-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
